Use monospace font for the timer to avoid timer flickering

--- a/src/app/module-viewer/riverside-step-template/template-heading/template-heading.component.sass
+++ b/src/app/module-viewer/riverside-step-template/template-heading/template-heading.component.sass
@@ -49,7 +49,7 @@
             border: 1px solid green
             width: 5vw
             text-align: center
-            font-family: Montserrat
+            font-family: monospace
 
 .heading-content-wrapper
     max-width: 800px
